--- a/styles/style.css
+++ b/styles/style.css
@@ -5,3 +5,54 @@
     font-variation-settings:
       "wdth" 100;
   }
+
+/* Shared Styles */
+
+.text-primary {
+    color: #FD6E0A;
+}
+
+.dark-2 {
+    color: #474747;
+}
+
+.button-primary {
+    background-color: #FD6E0A;
+    font-size: 20px;
+    font-weight: 800;
+    color: white;
+    padding: 18px 35px;
+    border: none;
+    border-radius: 5px;
+}
+
+/* Navbar Section Styles Starts */
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 200px;
+}
+
+.nav-title {
+    font-size: 45px;
+    font-weight: 800;
+}
+
+nav ul {
+    display: flex;
+    align-items: center;
+}
+
+nav ul li {
+    list-style: none;
+    margin-right: 50px;
+}
+
+nav li a {
+    text-decoration: none;
+    font-size: 20px;
+}
+
+/* Navbar Section Styles Ends */
