--- a/styles/style.css
+++ b/styles/style.css
@@ -12,8 +12,20 @@
     color: #FD6E0A;
 }
 
+.secondary-bg {
+    background-color: #FFF8F3;
+}
+
+.dark-1 {
+    color: #181818;
+}
+
 .dark-2 {
     color: #474747;
+}
+
+.dark-3 {
+    color: #757575;
 }
 
 .button-primary {
@@ -24,6 +36,25 @@
     padding: 18px 35px;
     border: none;
     border-radius: 5px;
+}
+
+.button-secondary {
+    background-color: white;
+    font-size: 20px;
+    font-weight: 800;
+    color: #FD6E0A;
+    padding: 16px 35px;
+    border: 2px solid #FD6E0A;
+    border-radius: 5px;
+    margin-left: 25px;
+}
+
+/* Header Section Styles Starts */
+
+.header {
+    background-image: url('../images/developer.png'), url('../images/header-bg.png');
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
 }
 
 /* Navbar Section Styles Starts */
@@ -56,3 +87,37 @@ nav li a {
 }
 
 /* Navbar Section Styles Ends */
+
+/* Banner Section Styles Starts */
+
+.banner {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 35px 0 230px;
+}
+
+.banner-content {
+    max-width: 580px;
+}
+
+.banner-greetings {
+    font-size: 45px;
+    font-weight: 600;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 800;
+}
+
+.banner-description {
+    font-size: 18px;
+}
+
+.banner-profile-picture {
+    width: 580px;
+}
+
+/* Banner Section Styles Ends */
+
+/* Header Section Styles Ends */
