--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,29 @@
     margin-left: 25px;
 }
 
+.section-title {
+    font-size: 35px;
+    font-weight: 800;
+    color: #181818;
+}
+
+.section-description {
+    font-size: 18px;
+    color: #757575;
+    margin-top: 50px;
+}
+
+.item-title {
+    font-size: 18px;
+    color: #757575;
+}
+
+.item-description {
+    font-size: 18px;
+    font-weight: 600;
+    color: #474747;
+}
+
 /* Header Section Styles Starts */
 
 .header {
@@ -121,3 +144,29 @@ nav li a {
 /* Banner Section Styles Ends */
 
 /* Header Section Styles Ends */
+
+/* Main Section Styles Starts */
+
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* Main Section Styles Ends */
+
+/* About Section Styles Starts */
+
+.about {
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+
+.about-items {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 40px;
+}
+
+/* About Section Styles Ends */
