--- a/styles/style.css
+++ b/styles/style.css
@@ -72,6 +72,10 @@
     color: #474747;
 }
 
+.text-center {
+    text-align: center;
+}
+
 /* Header Section Styles Starts */
 
 .header {
@@ -152,6 +156,11 @@ main {
     margin: 0 auto;
 }
 
+main section {
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
 /* Main Section Styles Ends */
 
 /* About Section Styles Starts */
@@ -160,7 +169,6 @@ main {
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
 }
 
 .about-items {
@@ -170,3 +178,23 @@ main {
 }
 
 /* About Section Styles Ends */
+
+/* Skills Section Styles Starts */
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0 6px 50px 0 rgba(0, 0, 0, 0.06);
+}
+
+.skill-description {
+    font-size: 16px;
+    color: #757575;
+}
+
+/* Skills Section Styles Ends */
